--- a/.github/workflows/build-and-test-pycobertura.yml
+++ b/.github/workflows/build-and-test-pycobertura.yml
@@ -33,3 +33,43 @@ jobs:
         with:
           name: cobertura-coverage-${{ github.sha }}-${{ matrix.python-version }}
           path: coverage.xml
+      - name: Checkout base ref
+        if: ${{ github.event_name == 'pull_request' }}
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.base.sha }}
+          path: base_ref
+      # this action can download from other workflow/runs
+      - uses: dawidd6/action-download-artifact@v2
+        with:
+          name: cobertura-coverage-${{ github.event.pull_request.base.sha }}-${{ matrix.python-version }}
+          commit: ${{ github.event.pull_request.base.sha }}
+          path: base_ref
+      - name: install-pycobertura
+        if: ${{ github.event_name == 'pull_request' }}
+        run: |
+          python setup.py install
+      - name: make-coverage-diff-markdown-against-base-ref
+        if: ${{ github.event_name == 'pull_request' }}
+        run: |
+          # Coverage + Source code to coverage diff markdown
+          pycobertura diff \
+            --source1 base_ref/ \
+            --source2 . \
+            base_ref/coverage.xml \
+            coverage.xml \
+            --format=markdown \
+            -o coveragediff.md || true
+          cat coveragediff.md
+      #- name: comment-on-pr
+      #  if: ${{ github.event_name == 'pull_request' }}
+      #  uses: mshick/add-pr-comment@v2
+      #  with:
+      #    message-path: coveragediff.md
+      #    message-id: cobertura-coverage-${{ matrix.python-version }}
+      - name: comment-on-pr-python-metrics
+        uses: marocchino/sticky-pull-request-comment@v2
+        if: ${{ github.event_name == 'pull_request' }}
+        with:
+          header: ${{ matrix.python-version }}
+          path: coveragediff.md
