--- a/pytest.ini
+++ b/pytest.ini
@@ -26,6 +26,8 @@ addopts =
 
     #--cov-config=.coveragerc
 
+    --snapshot-default-extension=syrupy.extensions.single_file.SingleFileSnapshotExtension
+
     # Previous versions included the following, but it's a bad idea because it
     # hard-codes the value and makes it hard to change from the command-line
     tests/
